versioned_docs/version-5.2/start/licensing/licensing-overview.mdx
---
title: "Licensing Overview"
hide_table_of_contents: true
sidebar_label: Licensing Overview
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Licensing Overview
<Admonition type="note" title="Note">

* The license key is in JSON format.  
  It is sent to the email address that was provided when obtaining the license.  

* There are a few **license types** available, see below.  

* Each license has a specific date on which it will expire.  
  To renew your license see [renew license](../../start/licensing/renew-license.mdx).   

* In this page:
    * [License types](../../start/licensing/licensing-overview.mdx#license-types)
    * [Manage license view](../../start/licensing/licensing-overview.mdx#manage-license-view)

</Admonition>
## License types

<Admonition type="info" title="Info">
Visit the [pricing page](https://ravendb.net/buy) to see which features are included with each license type.
</Admonition>

<Admonition type="note" title="Note">
**Developer**  

  * The developer license is for development use only and isn't applicable for commercial use.  
    You must upgrade this license before going into production.   
  * It is fully featured but temporary - license lasts 6 months and can be renewed.  
  * Certificates exceeding 4 months expiration period are Not allowed to be used with this license.  
    Automatic renewal of Let’s Encrypt certificates is disabled.  
  * When you are ready to go into production:  
    * Be sure to choose a license that has all features with which your client was developed.  
    * [Upgrade to a production license](https://ravendb.net/buy) and then [replace](../../start/licensing/replace-license.mdx) the developer license.  
    
  * The developer license can be obtained [here](https://ravendb.net/buy#developer).
</Admonition>

<Admonition type="note" title="Note">
**Community**  

  * A basic production-grade license.
  * Community licenses last for one year and can be renewed every year.  
</Admonition>

<Admonition type="note" title="Note">
**Professional**  

  * A standard production-grade license.  
  * Extended automatically if the server has access to RavenDB's License Server.  
</Admonition>

<Admonition type="note" title="Note">
**Enterprise**  

  * A high-performance, fully-featured production-grade license.  
  * Extended automatically if the server has access to RavenDB's License Server.  
</Admonition>

<Admonition type="note" title="Note">
**ISV Licenses**

* ISV licenses are commercial licenses that allow you to redistribute RavenDB with your software  
  for on-premise installation and use by your customers.  
* Available ISV license types are: Essential, Professional, and Enterprise.  
* [Contact RavenDB for more details](https://ravendb.net/contact).

</Admonition>




## Manage license view

![About page](./assets/about-page.png)

#### 1. &nbsp; About
* Go to the About page to see the version, license, and support info.

#### 2. &nbsp; Version
* **Current version**:  
  Specifies the current Server and Studio client versions used.  
  Knowing the version is important as documentation, features, and patches are version sensitive.
* **Send Feedback**:  
  You can send RavenDB feedback about any issues you've encountered.
* **Latest version info**:  
  Specifies whether you are using the latest Server version.  
  If you need to upgrade to a new version see [upgrading instructions](../../start/installation/upgrading-to-new-version.mdx).  

#### 3. &nbsp; License Information  
* **Type**:  
  Specifies which license type you're using.  
* **Expires**:  
  Specifies the date on which the license will expire.  
* **Available features**:  
  The features included with this license are listed.  
* <a id="license-server"/> **License Server**:  
  Notifies if there is an active connection to RavenDB's License Server.  
  If you aren't connected, it is usually either because a firewall is blocking the connection,  
  or your server is running offline.  
    * Make sure that RavenDB has access to `api.ravendb.net`.  
    * Click the refresh button to check the connection.  

  ![License server connection](./assets/license-server.png)

#### 4. &nbsp; Available actions  
* [Replace License](../../start/licensing/replace-license.mdx) / [Force Update](../../start/licensing/force-update.mdx) / [Renew License](../../start/licensing/renew-license.mdx)  

#### 5. &nbsp; Support plan  
* Specifies the support options available under your current support plan.

#### 6. &nbsp; Links
* **Access**:  
  Click to select RavenDB Community Discussions in GitHub, or Google Groups archive.
* **Upgrade**:  
  Click to go to the RavenDB support options page.




